@@ -85,6 +85,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-7979. Initialize block report IDs with a random number. (wang)
 
+    HDFS-8101. DFSClient use of non-constant DFSConfigKeys pulls in WebHDFS
+    classes at runtime. (Sean Busbey via atm)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
